updated to fix book covers appearing on search page

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -60,7 +60,8 @@ form{
 }
 
 .main-nav{
-    margin: 20px 20px;
+    margin-top: 20px;
+    margin-left: 20px;
 }
 
 .main-nav>a{
@@ -102,10 +103,22 @@ form{
 
 .book-details-grid-div{
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    width: 60%;
+    grid-template-columns: .5fr 2fr;
+    width: 65%;
     margin: 35px auto;
     gap: 10px;
+}
+
+.col1{
+    text-align: center;
+}
+
+.book-detail-img{
+    margin-top: 50%;
+}
+
+.book-details-list li{
+    margin: 5px 0;
 }
 
 .book-update-div{
@@ -136,8 +149,10 @@ form{
 
 .account-div{
     display: grid;
-    grid-template-columns: 0.9fr 3fr;
-    gap: 50px
+    grid-template-columns: 0.9fr 2fr;
+    gap: 50px;
+    width: 76%;
+    margin: 0 auto;
 }
 
 .account-menu-aside{
@@ -150,6 +165,7 @@ form{
     display: grid;
     grid-template-columns: 1fr 3fr;
     margin: 20px auto;
+    gap: 30px
 }
 
 .book-image-div{
